# nixops-ovh

./: .gitignore  flake.nix  overrides.nix  pyproject.toml
nixops_ovh/: ovh_utils.py  plugin.py
