[tool.poetry]
name = "nixops_ovh"
version = "0.1.0"
description = "NixOps OVH plugin"
authors = ["Bryan Honof <bryanhonof@gmail.com>"]
license = "LGPL-3.0-only"
include = [ "nixops_ovh/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.9"
ovh = "^0.5.0"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
typing-extensions = "^3.7.4"
nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.910"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
ovh = "nixops_ovh.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
